--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main > section img {
 }
 
 main > section button {
-	background-color: #dfff;
+	background-color: #00BFFF;
 	border: none;
 	border-radius: 4px;
 	color: white;
@@ -34,14 +34,13 @@ main > section button {
 	font-size: 18px;
 	font-weight: 500px;
 	letter spacing: -0.6px;
-	line-height: 18px;
+	line-height: 20px;
 	padding: 9px, 23px;
 	text-transform: uppercase;
-
 }
 
 #detalhes-container {
-	font-weight;: 100
+	font-weight: 100;
 	list-style: none;
 	height: 30px;
 	width: 100%;
